fixtures/cpp/greeter/shim.g.h

// GENERATED BY bindsmith — do not edit.
#ifndef BINDSMITH_GREETER_SHIM_H_
#define BINDSMITH_GREETER_SHIM_H_

#include <stdbool.h>
#include <stddef.h>
#include <stdint.h>

#ifdef __cplusplus
extern "C" {
#endif

/// The message of the last call that failed, or NULL when the last call on this
/// thread succeeded. Owned by the shim, and valid until the next call on this
/// thread.
const char* greeter_last_error(void);

/// Frees a string this shim returned.
void greeter_free_string(char* value);

/// Greets people.
///
/// Opaque handle for `greeter::Greeter`.
typedef struct greeter_Greeter greeter_Greeter;

/// Greets with `prefix` in front of every name.
///
/// The caller owns the result; release it with `greeter_Greeter_delete`. NULL
/// means the call threw: ask `greeter_last_error`.
greeter_Greeter* greeter_Greeter_new(const char* prefix);

/// Greets `name`.
///
/// Throws `std::invalid_argument` when `name` is empty, which is what an `extern
/// "C"` boundary must not let escape.
///
/// The caller owns the result; release it with `greeter_free_string`. NULL means
/// the call threw.
///
/// Check `greeter_last_error` afterwards: this call can throw.
char* greeter_Greeter_Greet(greeter_Greeter* self, const char* name);

/// Changes the prefix.
///
/// Check `greeter_last_error` afterwards: this call can throw.
void greeter_Greeter_SetPrefix(greeter_Greeter* self, const char* prefix);

/// How many greetings this instance has produced.
///
/// Check `greeter_last_error` afterwards: this call can throw.
int greeter_Greeter_Count(greeter_Greeter* self);

/// The library version.
///
/// Check `greeter_last_error` afterwards: this call can throw.
int greeter_Greeter_Version(void);

/// Destroys a `greeter::Greeter`. Safe on NULL.
void greeter_Greeter_delete(greeter_Greeter* self);

#ifdef __cplusplus
}
#endif

// Not bridged, and still reported by `bindsmith verify`:
//   Greeter.GreetAll: `std::vector<std::string>` has no C spelling; return a
//     handle or a string instead

#endif  // BINDSMITH_GREETER_SHIM_H_