fixtures/lib/generated/greeter_cpp/shim.g.dart

// GENERATED BY bindsmith — do not edit.

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint, unused_import, unused_element, deprecated_member_use_from_same_package
@ffi.DefaultAsset('package:greeter/greeter.dart')
library;

import 'dart:ffi' as ffi;

/// How many greetings this instance has produced.
///
/// Check `greeter_last_error` afterwards: this call can throw.
@ffi.Native<ffi.Int Function(ffi.Pointer<greeter_Greeter>)>()
external int greeter_Greeter_Count(ffi.Pointer<greeter_Greeter> self);

/// Greets `name`.
///
/// Throws `std::invalid_argument` when `name` is empty, which is what an `extern
/// "C"` boundary must not let escape.
///
/// The caller owns the result; release it with `greeter_free_string`. NULL means
/// the call threw.
///
/// Check `greeter_last_error` afterwards: this call can throw.
@ffi.Native<
  ffi.Pointer<ffi.Char> Function(
    ffi.Pointer<greeter_Greeter>,
    ffi.Pointer<ffi.Char>,
  )
>()
external ffi.Pointer<ffi.Char> greeter_Greeter_Greet(
  ffi.Pointer<greeter_Greeter> self,
  ffi.Pointer<ffi.Char> name,
);

/// Changes the prefix.
///
/// Check `greeter_last_error` afterwards: this call can throw.
@ffi.Native<
  ffi.Void Function(ffi.Pointer<greeter_Greeter>, ffi.Pointer<ffi.Char>)
>()
external void greeter_Greeter_SetPrefix(
  ffi.Pointer<greeter_Greeter> self,
  ffi.Pointer<ffi.Char> prefix,
);

/// The library version.
///
/// Check `greeter_last_error` afterwards: this call can throw.
@ffi.Native<ffi.Int Function()>()
external int greeter_Greeter_Version();

/// Destroys a `greeter::Greeter`. Safe on NULL.
@ffi.Native<ffi.Void Function(ffi.Pointer<greeter_Greeter>)>()
external void greeter_Greeter_delete(ffi.Pointer<greeter_Greeter> self);

/// Greets with `prefix` in front of every name.
///
/// The caller owns the result; release it with `greeter_Greeter_delete`. NULL
/// means the call threw: ask `greeter_last_error`.
@ffi.Native<ffi.Pointer<greeter_Greeter> Function(ffi.Pointer<ffi.Char>)>()
external ffi.Pointer<greeter_Greeter> greeter_Greeter_new(
  ffi.Pointer<ffi.Char> prefix,
);

/// Frees a string this shim returned.
@ffi.Native<ffi.Void Function(ffi.Pointer<ffi.Char>)>()
external void greeter_free_string(ffi.Pointer<ffi.Char> value);

/// The message of the last call that failed, or NULL when the last call on this
/// thread succeeded. Owned by the shim, and valid until the next call on this
/// thread.
@ffi.Native<ffi.Pointer<ffi.Char> Function()>()
external ffi.Pointer<ffi.Char> greeter_last_error();

final class greeter_Greeter extends ffi.Opaque {}
